# FatigueCantileverBend_PIU-5

drawings/: Back_panel_box_G1502.cdw  Top_front_panel_box_G1502.cdw
kicad/amp_photo/: amp_photo.kicad_prl  amp_photo.kicad_pro  amp_photo.kicad_sch
kicad/analog_board/: PS_shema.kicad_sch  analog_board-cache.lib  analog_board.kicad_pcb  analog_board.kicad_prl  analog_board.kicad_pro  analog_board.kicad_sch
kicad/digital_board/: digital_board-cache.lib  digital_board.kicad_pcb  digital_board.kicad_prl  digital_board.kicad_pro  digital_board.kicad_sch
programs/CalcDeflection/: CMakeLists.txt  Install.txt  Version.txt
programs/CalcDeflection/doc/: CalcDeflection_doc.tex  aboutProg.tex  algDeflection.tex  references.tex
programs/CalcDeflection/res/: application.qrc
programs/CalcDeflection/src/: infoDialog.cpp  infoDialog.h  main.cpp  mainwindow.cpp  mainwindow.h
programs/CalcDeflection/ui/: infoWindow.ui  mainwindow.ui
programs/PIU5_measuring_block/: PIU5_measuring_block.ino
programs/PIU5_pwm_controller/: PIU5_pwm_controller.ino
programs/linearApproximation/: linearApprox.ods  linearApproximation.cpp
